<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ActivityCategory"
    android:background="@color/white">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buyInsurance"
        android:textSize="@dimen/size18sp"
        android:textColor="@color/textColorTitleSmall"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size12dp"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/size23dp"
        android:layout_marginRight="@dimen/size23dp"
        android:layout_below="@+id/textViewTitle">

        <!--car insurance label-->
        <LinearLayout
            android:id="@+id/linearCarInsurance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="120dp"
            android:layout_weight="0.50"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:elevation="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/box_big">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="0.50"
                android:layout_marginTop="@dimen/size14dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/car"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:tint="@color/md_yellow_800"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/textViewCarInsurance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/carInsurance"
                android:layout_weight="1"
                android:gravity="center|top"
                android:textColor="@color/textColorTitleSmall"
                android:textSize="@dimen/size14sp"
                android:textStyle="bold"/>

        </LinearLayout>
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:background="@color/md_blue_400" />
        <!--bike insurance label-->
        <LinearLayout
            android:id="@+id/linearBikeInsurance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="130dp"
            android:layout_weight="0.50"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:elevation="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/box_big">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="0.50"
                android:layout_marginTop="@dimen/size14dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bike"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:tint="@color/md_yellow_800"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/textViewBikeInsurance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bikeInsurance"
                android:layout_weight="1"
                android:gravity="center|top"
                android:textColor="@color/textColorTitleSmall"
                android:textSize="@dimen/size14sp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>