<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/collapsing"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:fitsSystemWindows="true"
        android:elevation="@dimen/size20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            android:background="@drawable/bnic_logo" />
    </RelativeLayout>
    <!--Online insurance label-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/collapsing"
        android:layout_marginTop="@dimen/size11dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buyInsurance"
            android:textSize="@dimen/size18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size12dp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/size23dp"
            android:layout_marginRight="@dimen/size23dp"
            android:layout_below="@+id/textViewTitle">

            <!--Motor insurance label-->
            <LinearLayout
                android:id="@+id/linearMotorInsurance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:layout_weight="0.50"
                android:layout_marginBottom="13dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/box_big"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="0.50"
                    android:layout_marginTop="@dimen/size14dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/motor2"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:tint="@color/md_yellow_900"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/textViewMotorInsurance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/motorInsurance"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:textColor="@color/textColorTitleSmall"
                    android:textSize="@dimen/size14sp"
                    android:textStyle="bold"/>

            </LinearLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:background="@color/md_blue_400" />
            <!--Omp insurance label-->
            <LinearLayout
                android:id="@+id/linearOmpInsurance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:layout_weight="0.50"
                android:layout_marginBottom="13dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/box_big">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="0.50"
                    android:layout_marginTop="4dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/travel_insurance"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:tint="@color/md_yellow_900"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/textViewMiscInsurance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/omp"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:textColor="@color/textColorTitleSmall"
                    android:textSize="@dimen/size14sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size12dp"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/size23dp"
                android:layout_marginRight="@dimen/size23dp"
                android:layout_below="@+id/textViewTitle">

                <!--marine insurance label-->
                <LinearLayout
                    android:id="@+id/linearMarineInsurance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="120dp"
                    android:layout_weight="0.50"
                    android:layout_marginBottom="13dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:elevation="10dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/box_big">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="0.50"
                        android:layout_marginTop="@dimen/size14dp">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/marine"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:tint="@color/md_yellow_900"/>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/textViewMarineInsurance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/marineInsurance"
                        android:layout_weight="1"
                        android:gravity="center|top"
                        android:textColor="@color/textColorTitleSmall"
                        android:textSize="@dimen/size14sp"
                        android:textStyle="bold"/>

                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:background="@color/md_blue_400" />
                <!--Fire insurance label-->
                <LinearLayout
                    android:id="@+id/linearFireInsurance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="120dp"
                    android:layout_weight="0.50"
                    android:layout_marginBottom="13dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:elevation="10dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/box_big">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="0.50"
                        android:layout_marginTop="@dimen/size14dp">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/fire"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:tint="@color/md_yellow_900"/>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/textViewFireInsurance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/fireInsurance"
                        android:layout_weight="1"
                        android:gravity="center|top"
                        android:textColor="@color/textColorTitleSmall"
                        android:textSize="@dimen/size14sp"
                        android:textStyle="bold"/>

                </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    </ScrollView>
</RelativeLayout>